# GovApplications

./: .env  .gitignore  Dockerfile  README.md  adheart.py  adspy.py  data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: TodosProgramas.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_product.py  0003_product_expires.py  0004_alter_product_name.py  0005_user_browser_user_device_user_ip_adress.py  0006_remove_user_browser_remove_user_device_and_more.py  0007_logacess.py  0008_logacess_created_at.py  0009_alter_product_name.py  0010_allcookies.py  0011_alter_allcookies_options_allcookies_created_at.py  0012_alter_product_name.py  0013_product_img_product_link.py
app/templates/app/: adheart-node.html  adspy.html  advault.html  bigspy.html  index.html  login.html  pipiads.html
ferramentasspy/: asgi.py  settings.py  urls.py  wsgi.py
static/: adheart.js
static/css/: app.css
